--- a/static/shared/css/vui.css
+++ b/static/shared/css/vui.css
@@ -14721,11 +14721,11 @@ tr.overdue td {
   color: #c5203e;
 }
 
-.v-link-active {
+/*.v-link-active {
   color: #1d4f90 !important;
   text-decoration: underline;
 }
-
+*/
 .body {
   line-height: 1.4;
   font-family: Roboto, sans-serif;
