--- a/src/assets/variables.styl
+++ b/src/assets/variables.styl
@@ -1,3 +1,8 @@
+// // Make a Request
+// stylus_content = RestClient.post('http://sass2stylus.com/api', {'file' => File.new('YOUR-COMPASS-FILE.scss')})
+// // Parse a Response
+// File.open('YOUR-NEW-STYLUS-FILE.styl', 'w') { |file| file.write(stylus_content) }
+
 border-radius-small              = 0.125rem
 border-radius-medium             = 0.25rem
 border-radius-large              = 0.5rem
